[package]
name = "rustycom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tokio-serial = "5.4.1"
tokio-util = "0.7.8"
crossterm = "0.27.0"
clap = { version = "4.3.19", features = ["derive"]}